[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avb-forge"
version = "0.1.0"
description = "Active-perception and verifier-guided agentic video repair"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/avb_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

